<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECGTid</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="save_credentials">Save credentials</string>
    <string name="login_btn">Login</string>
    <string name="quit_btn">Logoff</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="send_btn">Send</string>
    <string name="delete_btn">Delete</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="prefs">Preferences</string>
    <string name="refresh">Refresh</string>
    <string name="weekTotal">Weekly Total</string>
    <string name="today_btn">Today</string>
    <string name="language">Language</string>
    <string name="def_language">Select default language</string>
    <string name="server">Server</string>
    <string name="server_address">Server address</string>
    <string name="url">URL</string>
    <string name="credentials">Credentials</string>
    <string name="your_username">Your Username</string>
    <string name="your_password">Your Password</string>
    <string name="recently_used_elements">Recently used elements</string>
    <string name="number_entries">Number of entries to store</string>
    <string name="capacity">Capacity</string>
    <string name="search_results">Search results per page</string>
    <string name="search_results_subtitle">Number of search results to show</string>
    <string name="previous">&lt;&lt;</string>
    <string name="next">>></string>
    <string name="alert_msg">Please fill in username and password.</string>
    <string name="alert_title">Cannot Login</string>
    <string name="alert_url">Invalid URL</string>
    <string name="alert_url_title">Please enter a valid server address.</string>
    <string name="quit_alert">Are you sure you want to logoff?</string>
    <string name="wrong_user_pass_title">Invalid username or password</string>
    <string name="wrong_user_pass_msg">Please enter a valid username and password!</string>
    <string name="login_msg">Logging in. Please wait&#8230;</string>
    <string name="refresh_msg">Please wait while the data is displayed</string>
    <string name="timeout_title">Internet connection problem!</string>
    <string name="timeout_msg">Slow internet connection or server connection problem.</string>
    <string name="refresh_ok">Registered hours successfully refreshed.</string>
    <string name="nointernet_title">No internet connection!</string>
    <string name="nointernet_msg">No internet connection is available.</string>
    <string name="user_locked_title">User Locked!</string>
    <string name="user_locked_msg">Your profile is currently locked.</string>
    <string name="att_abs_prompt">Select "Att./abs. type"</string>
    <string name="activity_type_prompt">Select "Activity Type"</string>
    <string name="please_wait">Please wait!</string>
    <string name="delete_title">Delete Time Registration</string>
    <string name="delete_msg">Are you sure you want to delete this time registration?</string>
    <string name="new_btn">New Registration</string>
    <string name="time_reg">Time Registration</string>
    <string name="registration">Registration</string>
    <string name="new_reg">New Registration</string>
    <string name="week_total">Total Worktime</string>
    <string name="hours">hours</string>
    <string name="co_area_search">Co Area</string>
    <string name="name_search">Name</string>  
    <string name="currency_search">Currency</string>
    <string name="chart_of_accts_search">Chart Of Accts</string>
    <string name="search_btn">Search</string>
    <string name="none">None</string>
    <string name="time_spend">Time Spend</string>
    <string name="wbs_element">WBS Element</string>
    <string name="search_results_title_first">Showing first</string>
    <string name="search_results_title_all">Search results:</string>
    <string name="search_results_title_end">results</string>
    <string name="search_data">Enter search criteria</string>
    <string name="show_more">Show more</string>
    <string name="no_change">No data was changed.</string>
    <string name="locked">Your personnel number is currently locked!</string>
    <string name="recently_used">Recently Used:</string>
    <string name="set">Set</string>
    <string name="validation">You can\'t register more than 24 hours per day!</string>

</resources>