<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <include
        android:id="@+id/id"
        layout="@layout/header_logo"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/id"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
       
        android:hint="@string/username_hint"
        android:inputType="text"
        android:padding="10dp"
        android:background="@layout/edittext_states"
        android:focusable="true" >
		
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/username"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@layout/edittext_states"
        android:focusable="true" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/save_credentials"
        android:textColor="@color/evry_green"
        android:button="@layout/checkbox_states"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@layout/send_button_states"
        android:text="@string/login_btn"
        style="@style/button" />

</RelativeLayout>