<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/id"
        layout="@layout/header" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/header"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_centerVertical="true"
             >

            <TextView
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:background="@layout/arrow_prev_states"
                 />
        </LinearLayout>

        <TextView
            android:id="@+id/title" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/previous"
            android:gravity="center_vertical"
            android:textSize="31sp"
            android:textStyle="bold" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/title"
            android:gravity="right"
            android:layout_centerVertical="true"
             >

            <TextView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginRight="10dp"
                android:background="@layout/arrow_next_states"
                 />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/weekDays"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:textSize="13sp"
            android:text="@string/sun" />

        <TextView
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/sunday"
            android:layout_marginLeft="13dp"
            android:textSize="13sp"
            android:text="@string/mon" />

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/monday"
            android:layout_marginLeft="13dp"
            android:textSize="13sp"
            android:text="@string/tue" />

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tuesday"
            android:layout_marginLeft="18dp"
            android:textSize="13sp"
            android:text="@string/wed" />

        <TextView
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/wednesday"
            android:layout_marginLeft="18dp"
            android:textSize="13sp"
            android:text="@string/thu" />

        <TextView
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/thursday"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="23dp"
            android:textSize="13sp"
            android:text="@string/fri" />

        <TextView
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/friday"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="23dp"
            android:textSize="13sp"
            android:text="@string/sat"
             />
        
        </RelativeLayout>

    <ImageView
        android:id="@+id/calendarLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />
    
    <GridView
        
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:horizontalSpacing="1dp"
        android:numColumns="7"
        android:stretchMode="columnWidth"
        android:verticalSpacing="13dp"
        android:listSelector="#00000000"
        android:layout_marginTop="20dp" />

</LinearLayout>